Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-10806

setModel on the header(s) of a QAbstractItemView leads to a memory leak

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 4.7.0
    • 4.6.2
    • Widgets: Itemviews
    • None
    • 28b894f65c5aba01d5ee80c20f617478faaee7e7

      For example for a QTreeView (but is the same for other item views like QTableView)

      =============src\gui\itemviews\qtreeview.cpp, Line 235, QTreeView::setModel(..):=============
      d->header->setModel(model);
      QAbstractItemView::setModel(model);

      =============src\gui\itemviews\qheader.cpp, Line 410, QHeaderView::setModel(..):=============
      QAbstractItemView::setModel(model);

      =============src\gui\itemviews\qabstractitemview.cpp, Line 682, QAbstractItemView::setModel(..):=============
      setSelectionModel(new QItemSelectionModel(d->model, this));

      But you in qtreeview.cpp we also have:

      =============src\gui\itemviews\qtreeview.cpp, Line 277, QTreeView::setSelectionModel(..):=============
      d->header->setSelectionModel(selectionModel);
      =================================

      So we are creating 2 QItemSelectionModel for the header: one from the header setModel and one from the QTreeView::setSelectionModel. The first one is never used and never deleted.

      A patch is included to work around the memory leak.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            vfm Thierry Bastian (closed Nokia identity) (Inactive)
            sanonymous Nokia Qt Support (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes