Fix a memory leak from QItemSelectionModel when changing the model

Reviewed-By: ogoffart
Task-Number: QTBUG-10806
(cherry picked from commit 28b894f65c5aba01d5ee80c20f617478faaee7e7)